/**
 * system_coordinator.c  2025-12-05
 * 
 * Copyright (C) 2000-2025 All Right Reserved
 * 
 * THIS CODE AND INFORMATION ARE PROVIDED "AS IS" WITHOUT WARRANTY OF ANY
 * KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND/OR FITNESS FOR A
 * PARTICULAR PURPOSE.
 *
 * Auto generate for Design Patterns in C *
 * 
 * System Coordinator FSM implementation for TWS Earphone System.
 */
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "system_coordinator.h"
#include "recording_fsm.h"
#include "ota_fsm.h"

/* Static operations structure */
static struct system_coordinator_ops sys_ops;

/* State names for debugging */
static const char *state_names[] = {
    "SYS_INIT",
    "SYS_IDLE",
    "SYS_RECORDING",
    "SYS_RECORDING_AND_UPLOADING",
    "SYS_UPLOADING",
    "SYS_OTA",
    "SYS_ERROR",
    "SYS_SLEEP",
    "SYS_SHUTDOWN",
    "SYS_RESET"
};

/* Event names for debugging */
static const char *event_names[] = {
    "SYS_EVT_POWER_ON",
    "SYS_EVT_POWER_OFF",
    "SYS_EVT_REC_START",
    "SYS_EVT_REC_STOP",
    "SYS_EVT_REC_PAUSE",
    "SYS_EVT_REC_RESUME",
    "SYS_EVT_UPLOAD_START",
    "SYS_EVT_UPLOAD_COMPLETE",
    "SYS_EVT_NETWORK_CONNECTED",
    "SYS_EVT_NETWORK_DISCONNECTED",
    "SYS_EVT_BLUETOOTH_CONNECTED",
    "SYS_EVT_BLUETOOTH_DISCONNECTED",
    "SYS_EVT_LOW_BATTERY",
    "SYS_EVT_CHARGING",
    "SYS_EVT_ERROR",
    "SYS_EVT_RESET",
    "SYS_EVT_TRANSFER_MODE_CHANGE",
    "SYS_EVT_STREAMING_START",
    "SYS_EVT_STREAMING_STOP",
    "SYS_EVT_FILE_UPLOAD_START",
    "SYS_EVT_FILE_UPLOAD_COMPLETE",
    /* OTA events */
    "SYS_EVT_OTA_START",
    "SYS_EVT_OTA_CANCEL",
    "SYS_EVT_OTA_CHECK",
    "SYS_EVT_OTA_STATUS",
    "SYS_EVT_OTA_PROGRESS",
    "SYS_EVT_OTA_COMPLETE",
    "SYS_EVT_OTA_ERROR"
};

/* Internal helper functions */
static void transition_to_state(struct system_coordinator *sys, enum system_state new_state);
static void handle_event_in_state(struct system_coordinator *sys, enum system_event event, void *data);
static void forward_ota_event(struct system_coordinator *sys, enum system_event event, void *data);

/* Check if there is a pending firmware update */
static int has_pending_update(struct system_coordinator *sys) {
    /* For simulation purposes, we can check a configuration file,
     * environment variable, or a global flag.
     * Here we implement a simple simulation: if OTA FSM is present
     * and has a package URL set, we assume there is a pending update.
     * In real implementation, this should be replaced with actual logic.
     */
    if (sys && sys->ota_fsm) {
        /* Check if package URL is not empty (simplified) */
        /* In actual implementation, you might call ota_fsm_check_update() */
        return 0; /* Default: no pending update */
    }
    return 0;
}

/* State entry handlers */
static void enter_init(struct system_coordinator *sys) {
    printf("System entering INIT state\n");
    /* Initialize all subsystems */
    if (sys->recording_fsm) {
        /* Initialize recording FSM */
    }
    if (sys->comm_fsm) {
        /* Initialize communication FSM */
    }
    if (sys->power_fsm) {
        /* Initialize power FSM */
    }
    if (sys->audio_fsm) {
        /* Initialize audio FSM */
    }
    if (sys->efsm_protocol) {
        /* Initialize EFSM Protocol State Machine */
        /* Note: efsm_processor_init would be called by the owner */
    }
    if (sys->ota_fsm) {
        /* Initialize OTA FSM */
        /* Note: ota_fsm_init would be called by the owner */
    }
    
    /* After initialization, check if there is a pending firmware update */
    if (has_pending_update(sys)) {
        printf("Pending firmware update detected, transitioning to OTA state\n");
        transition_to_state(sys, SYS_OTA);
    } else {
        printf("No pending firmware update, transitioning to IDLE state\n");
        transition_to_state(sys, SYS_IDLE);
    }
}

static void enter_idle(struct system_coordinator *sys) {
    printf("System entering IDLE state\n");
    /* System is ready for user interaction */
    /* Activate low-power mode if needed */
}

static void enter_recording(struct system_coordinator *sys) {
    printf("System entering RECORDING state\n");
    /* Start recording process */
    /* Activate audio processing */
    /* Establish Bluetooth connection if needed */
    /* Start recording FSM */
    if (sys->recording_fsm) {
        recording_fsm_dispatch_event(sys->recording_fsm, REC_EVT_START, NULL);
    }
}

static void enter_uploading(struct system_coordinator *sys) {
    printf("System entering UPLOADING state\n");
    /* Start file upload process */
    /* Activate 4G network connection */
}

static void enter_recording_and_uploading(struct system_coordinator *sys) {
    printf("System entering RECORDING_AND_UPLOADING state\n");
    /* Start both recording and streaming transfer */
    /* Activate audio processing and network connection */
}

static void enter_error(struct system_coordinator *sys) {
    printf("System entering ERROR state: %s\n", sys->error_msg);
    /* Handle error condition */
    /* Notify user if possible */
    /* Attempt recovery if configured */
}

static void enter_sleep(struct system_coordinator *sys) {
    printf("System entering SLEEP state\n");
    /* Put subsystems into low-power mode */
}

static void enter_ota(struct system_coordinator *sys) {
    printf("System entering OTA state\n");
    /* Start OTA process */
    /* Notify OTA FSM to start upgrade */
    if (sys->ota_fsm) {
        ota_fsm_dispatch_event(sys->ota_fsm, OTA_EVT_START, NULL);
    }
    /* Block other subsystems from starting new operations */
}

static void enter_reset(struct system_coordinator *sys) {
    printf("System entering RESET state\n");
    /* Perform system reset operations */
    /* Reset all subsystems */
    if (sys->recording_fsm) {
        /* Reset recording FSM */
    }
    if (sys->comm_fsm) {
        /* Reset communication FSM */
    }
    if (sys->power_fsm) {
        /* Reset power FSM */
    }
    if (sys->audio_fsm) {
        /* Reset audio FSM */
    }
    if (sys->efsm_protocol) {
        /* Reset EFSM Protocol State Machine */
    }
    if (sys->ota_fsm) {
        /* Reset OTA FSM */
    }
    
    /* Clear error state */
    sys->error_code = 0;
    sys->error_msg[0] = '\0';
    
    /* After reset, transition to INIT state */
    transition_to_state(sys, SYS_INIT);
}

/* State exit handler */
static void exit_state(struct system_coordinator *sys) {
    printf("System exiting state %s\n", state_names[sys->current_state]);
    /* Clean up current state if needed */
}

/* Do action handler */
static void do_action(struct system_coordinator *sys) {
    /* Periodic actions based on current state */
    switch (sys->current_state) {
        case SYS_RECORDING:
            /* Monitor recording progress */
            /* Check for errors */
            break;
        case SYS_RECORDING_AND_UPLOADING:
            /* Monitor both recording and streaming */
            /* Check network status and recording quality */
            break;
        case SYS_UPLOADING:
            /* Monitor upload progress */
            /* Check network status */
            break;
        case SYS_IDLE:
            /* Periodic system checks */
            break;
        default:
            break;
    }
}

/* Event handlers for each state */
static void handle_init_state(struct system_coordinator *sys, enum system_event event, void *data) {
    switch (event) {
        case SYS_EVT_RESET:
            printf("Reset requested during INIT state\n");
            transition_to_state(sys, SYS_RESET);
            break;
        default:
            /* INIT state only handles internal transitions */
            (void)sys; (void)event; (void)data;
            break;
    }
}

static void handle_idle_state(struct system_coordinator *sys, enum system_event event, void *data) {
    switch (event) {
        case SYS_EVT_REC_START:
            printf("Starting recording from IDLE state\n");
            transition_to_state(sys, SYS_RECORDING);
            break;
        case SYS_EVT_POWER_OFF:
            printf("Powering off from IDLE state\n");
            transition_to_state(sys, SYS_SHUTDOWN);
            break;
        case SYS_EVT_LOW_BATTERY:
            printf("Low battery warning in IDLE state - entering SLEEP\n");
            transition_to_state(sys, SYS_SLEEP);
            break;
        case SYS_EVT_ERROR:
            printf("Error in IDLE state\n");
            transition_to_state(sys, SYS_ERROR);
            break;
        case SYS_EVT_OTA_START:
            printf("OTA start requested from IDLE state\n");
            transition_to_state(sys, SYS_OTA);
            break;
        case SYS_EVT_RESET:
            printf("Reset requested from IDLE state\n");
            transition_to_state(sys, SYS_RESET);
            break;
        default:
            printf("Unhandled event %s in IDLE state\n", event_names[event]);
            break;
    }
}

static void handle_recording_state(struct system_coordinator *sys, enum system_event event, void *data) {
    switch (event) {
        case SYS_EVT_REC_STOP:
            printf("Stopping recording\n");
            transition_to_state(sys, SYS_UPLOADING);
            break;
        case SYS_EVT_REC_PAUSE:
            printf("Pausing recording\n");
            if (sys->recording_fsm) {
                recording_fsm_dispatch_event(sys->recording_fsm, REC_EVT_PAUSE, data);
            }
            /* System stays in RECORDING state but recording FSM will be paused */
            break;
        case SYS_EVT_REC_RESUME:
            printf("Resuming recording\n");
            if (sys->recording_fsm) {
                recording_fsm_dispatch_event(sys->recording_fsm, REC_EVT_RESUME, data);
            }
            break;
        case SYS_EVT_STREAMING_START:
            printf("Starting streaming while recording\n");
            transition_to_state(sys, SYS_RECORDING_AND_UPLOADING);
            break;
        case SYS_EVT_ERROR:
            printf("Error during recording\n");
            transition_to_state(sys, SYS_ERROR);
            break;
        case SYS_EVT_LOW_BATTERY:
            printf("Low battery during recording\n");
            /* Handle low battery - may need to stop recording */
            break;
        case SYS_EVT_RESET:
            printf("Reset requested during recording\n");
            transition_to_state(sys, SYS_RESET);
            break;
        default:
            printf("Unhandled event %s in RECORDING state\n", event_names[event]);
            break;
    }
}

static void handle_recording_and_uploading_state(struct system_coordinator *sys, enum system_event event, void *data) {
    switch (event) {
        case SYS_EVT_REC_STOP:
            printf("Stopping recording in RECORDING_AND_UPLOADING state\n");
            transition_to_state(sys, SYS_UPLOADING);
            break;
        case SYS_EVT_STREAMING_STOP:
            printf("Stopping streaming in RECORDING_AND_UPLOADING state\n");
            transition_to_state(sys, SYS_RECORDING);
            break;
        case SYS_EVT_UPLOAD_COMPLETE:
            printf("Upload complete while recording\n");
            /* Continue recording, stop uploading */
            transition_to_state(sys, SYS_RECORDING);
            break;
        case SYS_EVT_NETWORK_DISCONNECTED:
            printf("Network disconnected during streaming\n");
            /* Continue recording only */
            transition_to_state(sys, SYS_RECORDING);
            break;
        case SYS_EVT_ERROR:
            printf("Error during recording and uploading\n");
            transition_to_state(sys, SYS_ERROR);
            break;
        case SYS_EVT_RESET:
            printf("Reset requested during recording and uploading\n");
            transition_to_state(sys, SYS_RESET);
            break;
        default:
            printf("Unhandled event %s in RECORDING_AND_UPLOADING state\n", event_names[event]);
            break;
    }
}

static void handle_uploading_state(struct system_coordinator *sys, enum system_event event, void *data) {
    switch (event) {
        case SYS_EVT_UPLOAD_COMPLETE:
            printf("Upload complete\n");
            transition_to_state(sys, SYS_IDLE);
            break;
        case SYS_EVT_NETWORK_DISCONNECTED:
            printf("Network disconnected during upload\n");
            /* Handle network loss - retry or error */
            break;
        case SYS_EVT_ERROR:
            printf("Error during upload\n");
            transition_to_state(sys, SYS_ERROR);
            break;
        case SYS_EVT_RESET:
            printf("Reset requested during uploading\n");
            transition_to_state(sys, SYS_RESET);
            break;
        default:
            printf("Unhandled event %s in UPLOADING state\n", event_names[event]);
            break;
    }
}

static void handle_error_state(struct system_coordinator *sys, enum system_event event, void *data) {
    switch (event) {
        case SYS_EVT_RESET:
            printf("Resetting from ERROR state\n");
            transition_to_state(sys, SYS_RESET);
            break;
        case SYS_EVT_POWER_OFF:
            printf("Powering off from ERROR state\n");
            transition_to_state(sys, SYS_SHUTDOWN);
            break;
        default:
            printf("Unhandled event %s in ERROR state\n", event_names[event]);
            break;
    }
}

static void handle_sleep_state(struct system_coordinator *sys, enum system_event event, void *data) {
    switch (event) {
        case SYS_EVT_POWER_ON:
            printf("Waking from SLEEP state\n");
            transition_to_state(sys, SYS_IDLE);
            break;
        case SYS_EVT_RESET:
            printf("Reset requested from SLEEP state\n");
            transition_to_state(sys, SYS_RESET);
            break;
        default:
            printf("Unhandled event %s in SLEEP state\n", event_names[event]);
            break;
    }
}

static void handle_ota_state(struct system_coordinator *sys, enum system_event event, void *data) {
    switch (event) {
        case SYS_EVT_OTA_COMPLETE:
            printf("OTA update completed successfully\n");
            transition_to_state(sys, SYS_IDLE);
            break;
        case SYS_EVT_OTA_CANCEL:
            printf("OTA update cancelled\n");
            transition_to_state(sys, SYS_IDLE);
            break;
        case SYS_EVT_OTA_ERROR:
            printf("OTA update failed\n");
            transition_to_state(sys, SYS_ERROR);
            break;
        case SYS_EVT_RESET:
            printf("Reset requested during OTA - cancelling OTA and resetting\n");
            /* Cancel OTA and go to reset */
            if (sys->ota_fsm) {
                ota_fsm_dispatch_event(sys->ota_fsm, OTA_EVT_CANCEL, NULL);
            }
            transition_to_state(sys, SYS_RESET);
            break;
        case SYS_EVT_POWER_OFF:
            printf("Power off during OTA - cancelling\n");
            /* Cancel OTA and go to shutdown */
            if (sys->ota_fsm) {
                ota_fsm_dispatch_event(sys->ota_fsm, OTA_EVT_CANCEL, NULL);
            }
            transition_to_state(sys, SYS_SHUTDOWN);
            break;
        default:
            printf("Unhandled event %s in OTA state\n", event_names[event]);
            break;
    }
}

static void handle_reset_state(struct system_coordinator *sys, enum system_event event, void *data) {
    /* RESET state is transient - it automatically transitions to INIT */
    /* No events are processed in RESET state */
    printf("System in RESET state - no events processed\n");
}

/* Forward OTA event to OTA FSM */
static void forward_ota_event(struct system_coordinator *sys, enum system_event event, void *data) {
    if (!sys || !sys->ota_fsm) {
        return;
    }
    
    /* Map system event to OTA FSM event */
    enum ota_event ota_evt;
    switch (event) {
        case SYS_EVT_OTA_START:
            ota_evt = OTA_EVT_START;
            break;
        case SYS_EVT_OTA_CANCEL:
            ota_evt = OTA_EVT_CANCEL;
            break;
        case SYS_EVT_OTA_CHECK:
            ota_evt = OTA_EVT_CHECK_UPDATE;
            break;
        case SYS_EVT_OTA_STATUS:
            /* Status query - no direct mapping, treat as check update */
            ota_evt = OTA_EVT_CHECK_UPDATE;
            break;
        case SYS_EVT_OTA_PROGRESS:
            /* Progress update - map to download progress */
            ota_evt = OTA_EVT_DOWNLOAD_PROGRESS;
            break;
        case SYS_EVT_OTA_COMPLETE:
            /* OTA complete - map to install complete */
            ota_evt = OTA_EVT_INSTALL_COMPLETE;
            break;
        case SYS_EVT_OTA_ERROR:
            ota_evt = OTA_EVT_ERROR;
            break;
        default:
            /* Not an OTA event */
            return;
    }
    
    /* Dispatch to OTA FSM */
    ota_fsm_dispatch_event(sys->ota_fsm, ota_evt, data);
}

/* Main event handler */
static void handle_event(struct system_coordinator *sys, enum system_event event, void *data) {
    printf("System handling event: %s in state: %s\n", 
          event_names[event], state_names[sys->current_state]);
    
    /* Forward OTA events to OTA FSM */
    if (event >= SYS_EVT_OTA_START && event <= SYS_EVT_OTA_ERROR) {
        forward_ota_event(sys, event, data);
        /* OTA events may also affect system state, but for now we just forward */
        /* Optionally, we could prevent further processing */
        /* Do NOT return here; allow state-specific handler to process as well */
    }
    
    /* Call state-specific event handler */
    switch (sys->current_state) {
        case SYS_INIT:
            handle_init_state(sys, event, data);
            break;
        case SYS_IDLE:
            handle_idle_state(sys, event, data);
            break;
        case SYS_RECORDING:
            handle_recording_state(sys, event, data);
            break;
        case SYS_RECORDING_AND_UPLOADING:
            handle_recording_and_uploading_state(sys, event, data);
            break;
        case SYS_UPLOADING:
            handle_uploading_state(sys, event, data);
            break;
        case SYS_OTA:
            handle_ota_state(sys, event, data);
            break;
        case SYS_ERROR:
            handle_error_state(sys, event, data);
            break;
        case SYS_SLEEP:
            handle_sleep_state(sys, event, data);
            break;
        case SYS_SHUTDOWN:
            /* No events handled in shutdown */
            break;
        case SYS_RESET:
            handle_reset_state(sys, event, data);
            break;
    }
}

/* State transition helper */
static void transition_to_state(struct system_coordinator *sys, enum system_state new_state) {
    if (sys->current_state == new_state) {
        return; /* No change */
    }
    
    /* Exit current state */
    if (sys_ops.exit_state) {
        sys_ops.exit_state(sys);
    }
    
    /* Update state */
    sys->previous_state = sys->current_state;
    sys->current_state = new_state;
    
    printf("System transition: %s -> %s\n", 
          state_names[sys->previous_state], state_names[sys->current_state]);
    
    /* Enter new state */
    switch (new_state) {
        case SYS_INIT:
            if (sys_ops.enter_init) sys_ops.enter_init(sys);
            break;
        case SYS_IDLE:
            if (sys_ops.enter_idle) sys_ops.enter_idle(sys);
            break;
        case SYS_RECORDING:
            if (sys_ops.enter_recording) sys_ops.enter_recording(sys);
            break;
        case SYS_RECORDING_AND_UPLOADING:
            if (sys_ops.enter_recording_and_uploading) sys_ops.enter_recording_and_uploading(sys);
            break;
        case SYS_UPLOADING:
            if (sys_ops.enter_uploading) sys_ops.enter_uploading(sys);
            break;
        case SYS_OTA:
            if (sys_ops.enter_ota) sys_ops.enter_ota(sys);
            break;
        case SYS_ERROR:
            if (sys_ops.enter_error) sys_ops.enter_error(sys);
            break;
        case SYS_SLEEP:
            if (sys_ops.enter_sleep) sys_ops.enter_sleep(sys);
            break;
        case SYS_SHUTDOWN:
            /* Shutdown handling */
            break;
        case SYS_RESET:
            if (sys_ops.enter_reset) sys_ops.enter_reset(sys);
            break;
    }
}

/* Initialize operations */
static void init_operations(void) {
    static int initialized = 0;
    if (initialized) return;
    
    sys_ops.init = NULL; /* Not used */
    sys_ops.destroy = NULL; /* Not used */
    sys_ops.handle_event = handle_event;
    sys_ops.enter_init = enter_init;
    sys_ops.enter_idle = enter_idle;
    sys_ops.enter_recording = enter_recording;
    sys_ops.enter_recording_and_uploading = enter_recording_and_uploading;
    sys_ops.enter_uploading = enter_uploading;
    sys_ops.enter_ota = enter_ota;
    sys_ops.enter_error = enter_error;
    sys_ops.enter_sleep = enter_sleep;
    sys_ops.enter_reset = enter_reset;
    sys_ops.exit_state = exit_state;
    sys_ops.do_action = do_action;
    
    initialized = 1;
}

/* Public API implementation */
void system_coordinator_init(struct system_coordinator *sys) {
    if (!sys) return;
    
    memset(sys, 0, sizeof(struct system_coordinator));
    init_operations();
    
    sys->current_state = SYS_INIT;
    sys->previous_state = SYS_INIT;
    
    /* Enter INIT state which will transition to IDLE */
    enter_init(sys);
}

void system_coordinator_destroy(struct system_coordinator *sys) {
    if (!sys) return;
    
    /* Clean up subsystems */
    /* Note: Subsystems should be destroyed by their owners */
    
    memset(sys, 0, sizeof(struct system_coordinator));
}

void system_coordinator_dispatch_event(struct system_coordinator *sys, enum system_event event, void *data) {
    if (!sys) return;
    
    if (sys_ops.handle_event) {
        sys_ops.handle_event(sys, event, data);
    }
}

enum system_state system_coordinator_get_state(struct system_coordinator *sys) {
    return sys ? sys->current_state : SYS_ERROR;
}

const char *system_coordinator_get_state_name(enum system_state state) {
    if (state >= 0 && state < (int)(sizeof(state_names)/sizeof(state_names[0]))) {
        return state_names[state];
    }
    return "UNKNOWN_STATE";
}

const char *system_coordinator_get_event_name(enum system_event event) {
    if (event >= 0 && event < (int)(sizeof(event_names)/sizeof(event_names[0]))) {
        return event_names[event];
    }
    return "UNKNOWN_EVENT";
}

void system_coordinator_set_error(struct system_coordinator *sys, int code, const char *msg) {
    if (!sys) return;
    
    sys->error_code = code;
    if (msg) {
        strncpy(sys->error_msg, msg, sizeof(sys->error_msg) - 1);
        sys->error_msg[sizeof(sys->error_msg) - 1] = '\0';
    } else {
        sys->error_msg[0] = '\0';
    }
}

int system_coordinator_get_error_code(struct system_coordinator *sys) {
    return sys ? sys->error_code : -1;
}

const char *system_coordinator_get_error_msg(struct system_coordinator *sys) {
    return sys ? sys->error_msg : "Invalid system coordinator";
}

void system_coordinator_set_recording_fsm(struct system_coordinator *sys, struct recording_fsm *fsm) {
    if (sys) sys->recording_fsm = fsm;
}

void system_coordinator_set_comm_fsm(struct system_coordinator *sys, struct comm_fsm *fsm) {
    if (sys) sys->comm_fsm = fsm;
}

void system_coordinator_set_power_fsm(struct system_coordinator *sys, struct power_fsm *fsm) {
    if (sys) sys->power_fsm = fsm;
}

void system_coordinator_set_audio_fsm(struct system_coordinator *sys, struct audio_fsm *fsm) {
    if (sys) sys->audio_fsm = fsm;
}

void system_coordinator_set_efsm_protocol(struct system_coordinator *sys, struct efsm_protocol *efsm) {
    if (sys) sys->efsm_protocol = efsm;
}

void system_coordinator_set_ota_fsm(struct system_coordinator *sys, struct ota_fsm *fsm) {
    if (sys) sys->ota_fsm = fsm;
}
